--- a/client/src/components/pages/Profile.css
+++ b/client/src/components/pages/Profile.css
@@ -17,26 +17,22 @@
 
 .profile-email {
   font-size: 15px;
-  margin: 5px 20px 5px 20px;
+  margin: 5px 20px 15px 20px;
   color: var(--darkgrey);
 }
 
 .profile-intro {
   background-color: var(--primary-light);
-  margin: 10px;
+  margin: auto;
   padding: 15px;
   border-radius: 10px;
-  color: var(--black);
+  max-width: 260px;
 }
 
 .profile-Text {
   color: black;
   padding: 10px;
   border-radius: 10px;
-  font-size: 16px;
-}
-
-.profile-allergies {
 }
 
 .profile-allergiesList {
@@ -44,6 +40,7 @@
   border-radius: 10px;
   margin: 10px;
   padding: 15px;
+  width: 600px;
 }
 
 .profile-titles {
@@ -52,6 +49,7 @@
   color: var(--primary-dark);
   margin-top: 10px;
   margin-left: 20px;
+  margin-bottom: 0px;
 }
 
 .profile-allergiesContainer {
@@ -68,4 +66,15 @@
 
 .profile-allergiesEditButton:hover {
   background-color: var(--primary-xdark);
+}
+
+.profile-all {
+}
+
+.col-4 {
+  margin-left: 100px;
+}
+
+.col-6 {
+  margin-left: 100px;
 }
