--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -41,6 +41,7 @@ body {
   font-family: "Dosis", sans-serif;
   font-weight: 300;
   background-color: var(--cream);
+  overflow-x: hidden;
 }
 
 form {
@@ -58,6 +59,10 @@ form {
 
 .u-flex-justifyCenter {
   justify-content: center;
+}
+
+.u-flex-spaceAround {
+  justify-content: space-around;
 }
 
 .u-flex-alignCenter {
